# asteroid-analysis

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  Makefile  QWEN.md  README.md  apophis.py  close_approaches.py  dangerous_asteroids.py  neows.py  pyproject.toml
scripts/: __init__.py  apophis.py  close_approaches.py  dangerous_asteroids.py  neows.py
src/asteroid_analysis/: __init__.py  app.py  build.py  cli.py  enrich_orbits.py  features.py  ingest.py  learning_reports.py  metadata.py  reports.py
tests/: test_aggregates.py  test_aggregates_semantics.py  test_app_guardrails.py  test_build.py  test_enrich_orbits.py  test_features.py  test_ingest.py  test_learning_reports.py  test_metadata.py  test_regression.py  test_reports.py
tests/fixtures/: asteroid_data_sample.csv
