[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "asteroid-analysis"
version = "0.1.0"
description = "NASA asteroid and NEO analysis tools."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pandas",
    "matplotlib",
    "requests",
    "tqdm",
    "plotly",
    "streamlit",
    "pyarrow",
]

[project.optional-dependencies]
dev = [
    "mypy",
    "pre-commit",
    "pytest",
    "ruff",
]

[project.scripts]
asteroid-analysis = "asteroid_analysis.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
target-version = "py312"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.mypy]
python_version = "3.12"
warn_unused_ignores = true
warn_unused_configs = true
ignore_missing_imports = true
